--- a/app/index.html
+++ b/app/index.html
@@ -4,14 +4,15 @@
   <meta charset="utf-8">
   <title>Yellow pages</title>
   <meta name="description" content="">
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,400,600,300' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,400,600,300' rel='stylesheet'
+        type='text/css'>
   <script src="http://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
   <script src="scripts/yamaps/yamaps.js" type="text/javascript"></script>
   <meta name="viewport" content="width=device-width">
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
   <!-- build:css(.) styles/vendor.css -->
   <!-- bower:css -->
-  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css"/>
   <!-- endbower -->
   <!-- endbuild -->
   <!-- build:css(.tmp) styles/main.css -->
@@ -46,9 +47,11 @@
       <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
         <ul class="nav navbar-nav">
-          <li class="col-sm-9"><input type="text" data-ng-model="search" class="form-control search" placeholder="Поиск"></li>
-          <li class="col-sm-2"><a ng-href="#/in">Войти</a></li>
-          <li class="col-sm-1"><a ng-href="#/reg">Регистрация</a></li>
+          <li class="col-sm-9"><input type="text" data-ng-model="search" class="form-control search"
+                                      placeholder="Поиск"></li>
+          <li class="col-sm-2"><a ui-sref="state2">Войти</a></li>
+          <li class="col-sm-1"><a ui-sref="state2">Регистрация</a></li>
+
         </ul>
       </div>
     </div>
@@ -56,10 +59,9 @@
 </div>
 
 <div class="container container-color">
-  <div ng-view></div>
+  <div ui-view></div>
+
 </div>
-
-
 
 
 <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
@@ -77,6 +79,7 @@
 <script src="bower_components/angular-route/angular-route.js"></script>
 <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
 <script src="bower_components/angular-touch/angular-touch.js"></script>
+<script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 
@@ -85,6 +88,7 @@
 <script src="scripts/services/services.js"></script>
 <script src="scripts/controllers/main.js"></script>
 <script src="scripts/controllers/about.js"></script>
+<script src="scripts/controllers/place.js"></script>
 <!-- endbuild -->
 </body>
 </html>
