--- a/app/index.html
+++ b/app/index.html
@@ -93,6 +93,7 @@
 <script src="scripts/controllers/about.js"></script>
 <script src="scripts/controllers/place.js"></script>
 <script src="scripts/controllers/placeId.js"></script>
+<script src="scripts/controllers/homeController.js"></script>
 <script src="scripts/directives/place-map.js"></script>
 <!-- endbuild -->
 </body>
