set up reviews, settings and myReviews

--- a/app/index.html
+++ b/app/index.html
@@ -100,9 +100,15 @@
 <script src="scripts/controllers/settingsController.js"></script>
 <script src="scripts/controllers/placeIdController.js"></script>
 <script src="scripts/controllers/settingsGroupController.js"></script>
+<script src="scripts/controllers/myReviewsController.js"></script>
+<script src="scripts/controllers/myReviewsCtrl.js"></script>
+<script src="scripts/controllers/myRwDirController.js"></script>
+<script src="scripts/controllers/likePlaceController.js"></script>
 <script src="scripts/directives/place-map.js"></script>
 <script src="scripts/directives/like.js"></script>
+<script src="scripts/directives/myReviewDirective.js"></script>
 <script src="scripts/directives/placeDirective.js"></script>
+<script src="scripts/directives/likePlaceDirective.js"></script>
 <script src="scripts/jqueryScripts.js"></script>
 <!-- endbuild -->
 </body>
