--- a/app/index.html
+++ b/app/index.html
@@ -104,11 +104,13 @@
 <script src="scripts/controllers/myReviewsCtrl.js"></script>
 <script src="scripts/controllers/myRwDirController.js"></script>
 <script src="scripts/controllers/likePlaceController.js"></script>
+<script src="scripts/controllers/itemsLikePlaceController.js"></script>
 <script src="scripts/directives/place-map.js"></script>
 <script src="scripts/directives/like.js"></script>
 <script src="scripts/directives/myReviewDirective.js"></script>
 <script src="scripts/directives/placeDirective.js"></script>
 <script src="scripts/directives/likePlaceDirective.js"></script>
+<script src="scripts/directives/itemsLikePlaceDirective.js"></script>
 <script src="scripts/jqueryScripts.js"></script>
 <!-- endbuild -->
 </body>
