--- a/app/index.html
+++ b/app/index.html
@@ -87,23 +87,23 @@
 <!-- endbuild -->
 
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
-<script src="scripts/app.js"></script>
+<script src="app.js"></script>
 <script src="scripts/services/services.js"></script>
-<script src="scripts/controllers/main.js"></script>
+<script src="pages/auth/auth.js"></script>
 <script src="scripts/controllers/about.js"></script>
-<script src="scripts/controllers/place.js"></script>
-<script src="scripts/controllers/placeId.js"></script>
-<script src="scripts/controllers/homeController.js"></script>
+<script src="pages/place/place.js"></script>
+<script src="pages/place-item/placeId.js"></script>
+<script src="pages/home/homeController.js"></script>
 <script src="scripts/controllers/likeController.js"></script>
-<script src="scripts/controllers/regController.js"></script>
-<script src="scripts/controllers/formPlaceId.js"></script>
-<script src="scripts/controllers/settingsController.js"></script>
-<script src="scripts/controllers/placeIdController.js"></script>
-<script src="scripts/controllers/settingsGroupController.js"></script>
-<script src="scripts/controllers/myReviewsController.js"></script>
-<script src="scripts/controllers/myReviewsCtrl.js"></script>
+<script src="pages/registration/regController.js"></script>
+<script src="components/places-list/places-list-items/formPlaceId.js"></script>
+<script src="pages/user-settings/settingsController.js"></script>
+<script src="components/places-list/places-list-items/placeIdController.js"></script>
+<script src="pages/user-settings/settingsGroupController.js"></script>
+<script src="pages/user-reviews/myReviewsController.js"></script>
+<script src="components/review/myReviewsCtrl.js"></script>
 <script src="scripts/controllers/myRwDirController.js"></script>
-<script src="scripts/controllers/likePlaceController.js"></script>
+<script src="user/likePlaceController.js"></script>
 <script src="scripts/controllers/itemsLikePlaceController.js"></script>
 <script src="scripts/directives/place-map.js"></script>
 <script src="scripts/directives/like.js"></script>
