--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,400,600,300' rel='stylesheet'
         type='text/css'>
   <script src="http://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
-  <script src="scripts/yamaps/yamaps.js" type="text/javascript"></script>
+  <script src="components/yamaps/yamaps.js" type="text/javascript"></script>
 
   <meta name="viewport" content="width=device-width">
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -17,7 +17,7 @@
   <!-- endbower -->
   <!-- endbuild -->
   <!-- build:css(.tmp) styles/main.css -->
-  <link rel="stylesheet" href="styles/main.css">
+  <link rel="stylesheet" href="components/styles/main.css">
   <!-- endbuild -->
 </head>
 <body ng-app="app" data-ng-controller="MainCtrl">
@@ -88,7 +88,7 @@
 
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
 <script src="app.js"></script>
-<script src="scripts/services/services.js"></script>
+<script src="components/services/services.js"></script>
 <script src="pages/auth/auth.js"></script>
 <script src="scripts/controllers/about.js"></script>
 <script src="pages/place/place.js"></script>
@@ -105,13 +105,13 @@
 <script src="components/review/myRwDirController.js"></script>
 <script src="components/user/likePlaceController.js"></script>
 <script src="components/review/itemsLikePlaceController.js"></script>
-<script src="scripts/directives/place-map.js"></script>
-<script src="scripts/directives/like.js"></script>
-<script src="scripts/directives/myReviewDirective.js"></script>
-<script src="scripts/directives/placeDirective.js"></script>
-<script src="scripts/directives/likePlaceDirective.js"></script>
-<script src="scripts/directives/itemsLikePlaceDirective.js"></script>
-<script src="scripts/jqueryScripts.js"></script>
+<script src="components/place/place-map.js"></script>
+<script src="components/place/like.js"></script>
+<script src="components/review/myReviewDirective.js"></script>
+<script src="components/place-item/placeDirective.js"></script>
+<script src="components/review/likePlaceDirective.js"></script>
+<script src="components/review/itemsLikePlaceDirective.js"></script>
+<script src="components/place-item/jqueryScripts.js"></script>
 <!-- endbuild -->
 </body>
 </html>
