--- a/app/index.html
+++ b/app/index.html
@@ -88,28 +88,27 @@
 <script src="app.js"></script>
 <script src="components/services/services.js"></script>
 <script src="pages/auth/auth.js"></script>
-<script src="scripts/controllers/about.js"></script>
 <script src="pages/main/place/place.controller.js"></script>
 <script src="pages/main/place/place-item/place-item.controller.js"></script>
 <script src="pages/main/home/home.controller.js"></script>
-<script src="components/main/place/likeController.js"></script>
+<script src="components/main/place/place-place.controller.js"></script>
 <script src="pages/registration/regController.js"></script>
-<script src="components/main/place/place-item/formPlaceId.js"></script>
+<script src="pages/main/place/place-item/place-item-review.controller.js"></script>
 <script src="pages/user-settings/user-settings.controller.js"></script>
-<script src="components/main/place/place-item/placeIdController.js"></script>
+<script src="components/review/review-place-item.controller.js"></script>
+<script src="components/main/place/place-item/place-item-map.controller.js"></script>
 <script src="pages/user-settings/user-settings-group.controller.js"></script>
 <script src="pages/user-reviews/user-reviews.controller.js"></script>
-<script src="components/review/myReviewsCtrl.js"></script>
-<script src="components/review/myRwDirController.js"></script>
-<script src="components/user/likePlaceController.js"></script>
-<script src="components/review/itemsLikePlaceController.js"></script>
-<script src="components/main/place/place-map.js"></script>
-<script src="components/main/place/like.js"></script>
-<script src="components/review/myReviewDirective.js"></script>
-<script src="components/review/placeDirective.js"></script>
-<script src="components/review/likePlaceDirective.js"></script>
-<script src="components/review/itemsLikePlaceDirective.js"></script>
-<script src="components/main/place/place-item/jqueryScripts.js"></script>
+<script src="components/review/review-user-review.controller.js"></script>
+<script src="components/review/review-home.controller.js"></script>
+<script src="components/review/review-home-item.controller.js"></script>
+<script src="components/main/place/place-item/place-item-map.directive.js"></script>
+<script src="components/main/place/place-place.directive.js"></script>
+<script src="components/review/review-user-review.directive.js"></script>
+<script src="components/review/review-place-item.directive.js"></script>
+<script src="components/review/review-home.directive.js"></script>
+<script src="components/review/review-home-item.directive.js"></script>
+<script src="components/main/place/place-item/place-item-jquery.controller.js"></script>
 <!-- endbuild -->
 </body>
 </html>
