--- a/app/pages/main/home/home.html
+++ b/app/pages/main/home/home.html
@@ -10,7 +10,7 @@
 
       <div class="col-xs-12 placeId-comment-likes"
            data-ng-repeat="comment in likeReviews | filter:count.id | filter:filt">
-        <like-place></like-place>
+        <review-home-directive></review-home-directive>
       </div>
 
     </div>
