--- a/app/pages/main/place/place.html
+++ b/app/pages/main/place/place.html
@@ -1,5 +1,5 @@
 <div class="col-xs-12 place" data-ng-repeat="place in places">
-  <like></like>
+  <place-place-directive></place-place-directive>
 </div>
 
 
